fix sizing and spacing issues, begin adding about me section

--- a/app.css
+++ b/app.css
@@ -6,24 +6,37 @@
     flex-direction: row;
     justify-content: space-between;
 }
+
+.carrot{
+font-size: 1.25em;
+font-weight: 600;
+}
+
+
+.information{
+    margin-top: 20px;
+    margin-bottom: 45px;
+}
 .topText{
     font-family: 'Oswald', sans-serif;
     margin: 10px 20px;
 }
+.row{
+    min-width: 600px;
+}
+
 #myPics{
+    /* max-width: 50%; */
     background-color: darkgray;
     margin-top: 25px;
     display: flex;
     flex-direction: row;
     justify-content: center;
 }
-.row{
-    min-width: 600px;
-}
 
-#myPics #myCarousel{
-    max-width: 35%;
-    max-height: 35%;
+.carousel-item{
+    max-width: 600px ;
+    max-height: 600px;
 }
 #text{
     font-size: 1.5em;
@@ -38,11 +51,6 @@ i{
     transition: font-size 0.5s;
 }
 
-.carousel-item{
-    max-width: 500px ;
-    max-height: 500px;
-}
-
 #colorIcon{
     margin-top: 20px;
     margin-right: 20px;
@@ -54,6 +62,10 @@ i{
     #text{
         font-size: 1.025rem;
     }
+    .row{
+        min-width: 200px;
+    }
+
 }
 
 .topText h1:hover{
